# live-coding

./: Esercizio(040725).py  README.md  analisi_sentiment.py  asincrono.ipynb  docker.md  gestione_libri.ipynb  gestione_libri2.ipynb  lezione_27_06.py  lezione_2_5.ipynb  livecoding.py  poetry.md  pyproject.toml  requirements
