[project]
name = "live-coding"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriele Greco",email = "74190512+GabriG23@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ipykernel = "^6.29.5"

